# quixtd

./: .qmlls.ini  CMakeLists.txt  README.md  qmldir  qxtd.cpp  qxtd.h
cpp/: CMakeLists_reference.txt
cpp/auth/: qtdauthcode.h  qtdauthparams.h  qtdauthstate.h  qx_td_auth_code.cpp  qx_td_auth_code.h  qx_td_auth_manager.cpp  qx_td_auth_manager.h  qx_td_auth_params.cpp  qx_td_auth_params.h  qx_td_auth_state.cpp  qx_td_auth_state.h  qx_td_auth_state_factory.cpp  qx_td_auth_state_factory.h
cpp/auth/requests/: qx_td_auth_code_response.cpp  qx_td_auth_code_response.h  qx_td_auth_delete_account_response.cpp  qx_td_auth_delete_account_response.h  qx_td_auth_encryption_key_response.cpp  qx_td_auth_encryption_key_response.h  qx_td_auth_logout_response.cpp  qx_td_auth_logout_response.h  qx_td_auth_parameters_response.cpp  qx_td_auth_parameters_response.h  (+8 more)
cpp/auxdb/: auxdb.cpp  postal-client.cpp
cpp/call/: qtdcalldiscardreason.h  qx_td_call_discard_reason.cpp  qx_td_call_discard_reason.h
cpp/chat/: qtdchat.cpp  qtdchat.h  qtdchataction.h  qtdchatactionbar.h  qtdchatadministratorrights.h  qtdchatlist.h  qtdchatmemberstatus.h  qtdchatpermissions.h  qtdchattype.h  qtdsecretchatstate.h  qtdsupergroupchat.cpp  qx_td_basic_group_chat.cpp  qx_td_basic_group_chat.h  qx_td_chat.cpp  qx_td_chat.h  qx_td_chat_action.cpp  qx_td_chat_action.h  qx_td_chat_action_bar.cpp  qx_td_chat_action_bar.h  qx_td_chat_action_factory.cpp  qx_td_chat_action_factory.h  qx_td_chat_administrator_rights.cpp  qx_td_chat_administrator_rights.h  qx_td_chat_invite_link_info.cpp  qx_td_chat_invite_link_info.h  qx_td_chat_list.cpp  qx_td_chat_list.h  qx_td_chat_list_model.cpp  qx_td_chat_list_model.h  qx_td_chat_list_sort_filter_model.cpp  qx_td_chat_list_sort_filter_model.h  qx_td_chat_member.cpp  qx_td_chat_member.h  qx_td_chat_member_status.cpp  qx_td_chat_member_status.h  qx_td_chat_permissions.cpp  qx_td_chat_permissions.h  qx_td_chat_position.cpp  qx_td_chat_position.h  qx_td_chat_type.cpp  (+9 more)
cpp/client/: qtdclient.cpp  qtdclient.h  qx_td_client.cpp  qx_td_client.h  qx_td_handle.cpp  qx_td_handle.h  qx_td_thread.cpp  qx_td_thread.h
cpp/common/: qabstractint64id.h  qtdrequest.h  qx_abstract_int64_id.cpp  qx_abstract_int64_id.h  qx_td_helpers.cpp  qx_td_helpers.h  qx_td_int.cpp  qx_td_int.h  qx_td_object.cpp  qx_td_object.h  qx_td_request.cpp  qx_td_request.h  qx_td_response.cpp  qx_td_response.h
cpp/connections/: qtdconnectionstate.h  qx_td_connection_manager.cpp  qx_td_connection_manager.h  qx_td_connection_state.cpp  qx_td_connection_state.h  qx_td_connection_state_factory.cpp  qx_td_connection_state_factory.h
cpp/files/: qtdanimation.h  qtdaudio.h  qtddocument.h  qtdlocalfile.h  qtdminithumbnail.h  qtdphotosize.h  qtdremotefile.h  qtdsticker.h  qtdthumbnail.h  qtdthumbnailformat.h  qtdvideo.h  qtdvideonote.h  qtdvoicenote.h  qx_td_animation.cpp  qx_td_animation.h  qx_td_audio.cpp  qx_td_audio.h  qx_td_document.cpp  qx_td_document.h  qx_td_download_file_request.cpp  qx_td_download_file_request.h  qx_td_file.cpp  qx_td_file.h  qx_td_local_file.cpp  qx_td_local_file.h  qx_td_mini_thumbnail.cpp  qx_td_mini_thumbnail.h  qx_td_photo.cpp  qx_td_photo.h  qx_td_photo_size.cpp  qx_td_photo_size.h  qx_td_photos.cpp  qx_td_photos.h  qx_td_remote_file.cpp  qx_td_remote_file.h  qx_td_sticker.cpp  qx_td_sticker.h  qx_td_thumbnail.cpp  qx_td_thumbnail.h  qx_td_thumbnail_format.cpp  (+7 more)
cpp/messages/: qtdmessagecontent.h  qtdmessageinteractioninfo.h  qtdmessagelink.h  qtdmessagelistmodel.cpp  qtdmessagelistmodel.h  qtdmessageschedulingstate.h  qtdmessagesender.cpp  qtdmessagesender.h  qtdmessagesenderchat.cpp  qtdmessagesenderchat.h  qtdmessagesenderuser.cpp  qtdmessagesenderuser.h  qtdmessagesendingstate.h  qx_td_chat_state.cpp  qx_td_chat_state.h  qx_td_draft_message.cpp  qx_td_draft_message.h  qx_td_message.cpp  qx_td_message.h  qx_td_message_content.cpp  qx_td_message_content.h  qx_td_message_content_factory.cpp  qx_td_message_content_factory.h  qx_td_message_interaction_info.cpp  qx_td_message_interaction_info.h  qx_td_message_link.cpp  qx_td_message_link.h  qx_td_message_list_model.cpp  qx_td_message_list_model.h  qx_td_message_scheduling_state.cpp  qx_td_message_scheduling_state.h  qx_td_message_sender.cpp  qx_td_message_sender.h  qx_td_message_sender_chat.cpp  qx_td_message_sender_chat.h  qx_td_message_sender_user.cpp  qx_td_message_sender_user.h  qx_td_message_sending_state.cpp  qx_td_message_sending_state.h
cpp/models/: qx_td_object_list_model.cpp  qx_td_object_list_model.h  qx_td_variant_list_model.cpp  qx_td_variant_list_model.h
cpp/network/: qtdnetworktype.h  qx_td_network_type.cpp  qx_td_network_type.h
cpp/notifications/: qtdenablenotifications.h  qtdnotificationsettings.h  qx_td_enable_notifications.cpp  qx_td_enable_notifications.h  qx_td_notification_settings.cpp  qx_td_notification_settings.h  qx_td_register_device_request.cpp  qx_td_register_device_request.h
cpp/quick/: plugin.cpp  plugin_reference.cpp  plugin_reference.h  qx_contacts.cpp  qx_contacts.h  qx_users.cpp  qx_users.h  users.cpp  users.h
cpp/settings/: qtdproxytype.cpp  qtdsettings.h  qx_td_proxy.cpp  qx_td_proxy.h  qx_td_proxy_type.cpp  qx_td_proxy_type.h  qx_td_settings.cpp  qx_td_settings.h
cpp/stickers/: qtdstickerset.h  qtdstickersets.h  qx_td_sticker_set.cpp  qx_td_sticker_set.h  qx_td_sticker_sets.cpp  qx_td_sticker_sets.h
cpp/user/: qtdcontact.h  qtdemojistatus.h  qtdusernames.h  qtdusers.cpp  qtdusers.h  qtduserstatus.h  qtdusertype.h  qx_td_contact.cpp  qx_td_contact.h  qx_td_emoji_status.cpp  qx_td_emoji_status.h  qx_td_profile_photo.cpp  qx_td_profile_photo.h  qx_td_user.cpp  qx_td_user.h  qx_td_user_full_info.cpp  qx_td_user_full_info.h  qx_td_user_status.cpp  qx_td_user_status.h  qx_td_user_status_factory.cpp  qx_td_user_status_factory.h  qx_td_user_type.cpp  qx_td_user_type.h  qx_td_usernames.cpp  qx_td_usernames.h  qx_td_users.cpp  qx_td_users.h
cpp/utils/: qtdmediatools.cpp  qx_td_await.h  qx_td_media_tools.cpp  qx_td_media_tools.h  qx_td_text_formatter.cpp  qx_td_text_formatter.h  qx_td_translate_tools.h  tlparser.py
(+262 files in other folders)
